# my-wins-turn

./: .gitignore  Dockerfile  README.md  pyproject.toml
my_wins_turn/: app.py
